// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero isLoading 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <p
        className="bx--skeleton__text"
        data-testid="hero-loading"
        style={
          Object {
            "width": "30%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero normal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with breadcrumb 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
      >
        <nav
          aria-label="Breadcrumb"
          className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
        >
          <ol
            className="bx--breadcrumb"
          >
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Type
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <span
                className="bx--link"
              >
                Instance
              </span>
            </li>
          </ol>
        </nav>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        />
      </div>
      <div
        className="Hero__StyledTitleSection-nej8yx-1 djCalR"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            Right Content
          </div>
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with breadcrumb with right content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
      >
        <nav
          aria-label="Breadcrumb"
          className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
        >
          <ol
            className="bx--breadcrumb"
          >
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Type
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <span
                className="bx--link"
              >
                Instance
              </span>
            </li>
          </ol>
        </nav>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            breadcrumb Right Content
          </div>
        </div>
      </div>
      <div
        className="Hero__StyledTitleSection-nej8yx-1 djCalR"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            Right Content
          </div>
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with close button 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
      >
        <nav
          aria-label="Breadcrumb"
          className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
        >
          <ol
            className="bx--breadcrumb"
          >
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Type
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <span
                className="bx--link"
              >
                Instance
              </span>
            </li>
          </ol>
        </nav>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        />
      </div>
      <div
        className="Hero__StyledTitleSection-nej8yx-1 djCalR"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            Right Content
          </div>
        </div>
        <button
          aria-label="Close"
          className="bx--modal-close"
          data-modal-close={true}
          data-testid="hero-close-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="bx--modal-close__icon"
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Close
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
              fillRule="nonzero"
            />
          </svg>
        </button>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with description 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with right content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div>
              Here is a long message relating some status... 
            </div>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--secondary"
              data-testid="Button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              aria-describedby={null}
              aria-pressed={null}
              className="iot--btn bx--btn bx--btn--primary"
              data-testid="Button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              type="button"
            >
              Take action!
            </button>
          </div>
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with tooltip (no link) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
      >
        <nav
          aria-label="Breadcrumb"
          className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
        >
          <ol
            className="bx--breadcrumb"
          >
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Type
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <span
                className="bx--link"
              >
                Instance
              </span>
            </li>
          </ol>
        </nav>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        />
      </div>
      <div
        className="Hero__StyledTitleSection-nej8yx-1 djCalR"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
          <div
            className="bx--tooltip__label"
            id="hero-tooltip-trigger"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                />
                <path
                  d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            Right Content
          </div>
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero with tooltip 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="Hero__StyledHero-nej8yx-0 fTphDS"
      data-testid="hero"
    >
      <div
        className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
      >
        <nav
          aria-label="Breadcrumb"
          className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
        >
          <ol
            className="bx--breadcrumb"
          >
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <a
                className="bx--link"
                href="/"
              >
                Type
              </a>
            </li>
            <li
              className="bx--breadcrumb-item"
            >
              <span
                className="bx--link"
              >
                Instance
              </span>
            </li>
          </ol>
        </nav>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        />
      </div>
      <div
        className="Hero__StyledTitleSection-nej8yx-1 djCalR"
      >
        <div
          className="Hero__StyledTitle-nej8yx-2 bbRUKN"
          data-testid="hero-title"
        >
          Explore
          <div
            className="bx--tooltip__label"
            id="hero-tooltip-trigger"
          >
            
            <div
              className="bx--tooltip__trigger"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              role="button"
              tabIndex={0}
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 22L17 14 13 14 13 16 15 16 15 22 12 22 12 24 20 24 20 22 17 22zM16 8a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 8z"
                />
                <path
                  d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Hero__StyledRightContent-nej8yx-4 cCeABe"
        >
          <div
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            Right Content
          </div>
        </div>
      </div>
      <p
        className="Hero__StyledPageDescription-nej8yx-3 ubnfT"
        data-testid="hero-description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 Hero ️⛔ Deprecation Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="bx--toast-notification bx--toast-notification--warning"
      kind="warning"
      role="alert"
      style={
        Object {
          "marginBottom": "0.5rem",
          "minWidth": "30rem",
        }
      }
    >
      <svg
        aria-hidden={true}
        className="bx--toast-notification__icon"
        fill="currentColor"
        focusable="false"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1	s1,0.4,1,1S10.6,16,10,16z"
        />
        <path
          d="M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S10.6,16,10,16z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          warning icon
        </title>
      </svg>
      <div
        className="bx--toast-notification__details"
      >
        <h3
          className="bx--toast-notification__title"
        >
          Deprecation Notice
        </h3>
        <div
          className="bx--toast-notification__subtitle"
        >
          Hero has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
        </div>
        <div
          className="bx--toast-notification__caption"
        >
          Refactor usages of Hero to use PageTitleBar instead.
        </div>
      </div>
    </div>
  </div>
</div>
`;
